// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`after fetch When given a title that matches multiple dashboards, filter on the title 1`] = `
<DashboardListing
  kbnUrlStateStorage={
    Object {
      "cancel": [Function],
      "change$": [Function],
      "get": [Function],
      "kbnUrlControls": Object {
        "cancel": [Function],
        "flush": [Function],
        "getPendingUrl": [Function],
        "listen": [Function],
        "update": [Function],
        "updateAsync": [Function],
      },
      "set": [Function],
    }
  }
  redirectTo={[MockFunction]}
  title="search by title"
>
  <Memo(TableListViewComp)
    createItem={[Function]}
    deleteItems={[Function]}
    editItem={[Function]}
    emptyPrompt={
      <EuiEmptyPrompt
        actions={
          <EuiButton
            color="primary"
            data-test-subj="newItemButton"
            fill={true}
            iconType="plusInCircle"
            onClick={[Function]}
            size="m"
          >
            Create a dashboard
          </EuiButton>
        }
        body={
          <React.Fragment>
            <p>
              Analyze all of your Elastic data in one place by creating a dashboard and adding visualizations.
            </p>
            <p>
              <FormattedMessage
                defaultMessage="New to Kibana? {sampleDataInstallLink} to take a test drive."
                id="dashboard.listing.createNewDashboard.newToKibanaDescription"
                values={
                  Object {
                    "sampleDataInstallLink": <EuiLink
                      onClick={[Function]}
                    >
                      Add some sample data
                    </EuiLink>,
                  }
                }
              />
            </p>
          </React.Fragment>
        }
        iconType="dashboardApp"
        title={
          <h1
            data-test-subj="emptyListPrompt"
            id="dashboardListingHeading"
          >
            Create your first dashboard
          </h1>
        }
      />
    }
    entityName="dashboard"
    entityNamePlural="dashboards"
    findItems={[Function]}
    getDetailViewLink={[Function]}
    headingId="dashboardListingHeading"
    id="dashboard"
    initialFilter="search by title"
    tableListTitle="Dashboards"
  >
    <DashboardUnsavedListing
      redirectTo={[MockFunction]}
      refreshUnsavedDashboards={[Function]}
      unsavedDashboardIds={
        Array [
          "dashboardUnsavedOne",
          "dashboardUnsavedTwo",
        ]
      }
    />
  </Memo(TableListViewComp)>
</DashboardListing>
`;

exports[`after fetch initialFilter 1`] = `
<DashboardListing
  kbnUrlStateStorage={
    Object {
      "cancel": [Function],
      "change$": [Function],
      "get": [Function],
      "kbnUrlControls": Object {
        "cancel": [Function],
        "flush": [Function],
        "getPendingUrl": [Function],
        "listen": [Function],
        "update": [Function],
        "updateAsync": [Function],
      },
      "set": [Function],
    }
  }
  redirectTo={[MockFunction]}
>
  <Memo(TableListViewComp)
    createItem={[Function]}
    deleteItems={[Function]}
    editItem={[Function]}
    emptyPrompt={
      <EuiEmptyPrompt
        actions={
          <EuiButton
            color="primary"
            data-test-subj="newItemButton"
            fill={true}
            iconType="plusInCircle"
            onClick={[Function]}
            size="m"
          >
            Create a dashboard
          </EuiButton>
        }
        body={
          <React.Fragment>
            <p>
              Analyze all of your Elastic data in one place by creating a dashboard and adding visualizations.
            </p>
            <p>
              <FormattedMessage
                defaultMessage="New to Kibana? {sampleDataInstallLink} to take a test drive."
                id="dashboard.listing.createNewDashboard.newToKibanaDescription"
                values={
                  Object {
                    "sampleDataInstallLink": <EuiLink
                      onClick={[Function]}
                    >
                      Add some sample data
                    </EuiLink>,
                  }
                }
              />
            </p>
          </React.Fragment>
        }
        iconType="dashboardApp"
        title={
          <h1
            data-test-subj="emptyListPrompt"
            id="dashboardListingHeading"
          >
            Create your first dashboard
          </h1>
        }
      />
    }
    entityName="dashboard"
    entityNamePlural="dashboards"
    findItems={[Function]}
    getDetailViewLink={[Function]}
    headingId="dashboardListingHeading"
    id="dashboard"
    initialFilter=""
    tableListTitle="Dashboards"
  >
    <DashboardUnsavedListing
      redirectTo={[MockFunction]}
      refreshUnsavedDashboards={[Function]}
      unsavedDashboardIds={
        Array [
          "dashboardUnsavedOne",
          "dashboardUnsavedTwo",
        ]
      }
    />
  </Memo(TableListViewComp)>
</DashboardListing>
`;

exports[`after fetch renders all table rows 1`] = `
<DashboardListing
  kbnUrlStateStorage={
    Object {
      "cancel": [Function],
      "change$": [Function],
      "get": [Function],
      "kbnUrlControls": Object {
        "cancel": [Function],
        "flush": [Function],
        "getPendingUrl": [Function],
        "listen": [Function],
        "update": [Function],
        "updateAsync": [Function],
      },
      "set": [Function],
    }
  }
  redirectTo={[MockFunction]}
>
  <Memo(TableListViewComp)
    createItem={[Function]}
    deleteItems={[Function]}
    editItem={[Function]}
    emptyPrompt={
      <EuiEmptyPrompt
        actions={
          <EuiButton
            color="primary"
            data-test-subj="newItemButton"
            fill={true}
            iconType="plusInCircle"
            onClick={[Function]}
            size="m"
          >
            Create a dashboard
          </EuiButton>
        }
        body={
          <React.Fragment>
            <p>
              Analyze all of your Elastic data in one place by creating a dashboard and adding visualizations.
            </p>
            <p>
              <FormattedMessage
                defaultMessage="New to Kibana? {sampleDataInstallLink} to take a test drive."
                id="dashboard.listing.createNewDashboard.newToKibanaDescription"
                values={
                  Object {
                    "sampleDataInstallLink": <EuiLink
                      onClick={[Function]}
                    >
                      Add some sample data
                    </EuiLink>,
                  }
                }
              />
            </p>
          </React.Fragment>
        }
        iconType="dashboardApp"
        title={
          <h1
            data-test-subj="emptyListPrompt"
            id="dashboardListingHeading"
          >
            Create your first dashboard
          </h1>
        }
      />
    }
    entityName="dashboard"
    entityNamePlural="dashboards"
    findItems={[Function]}
    getDetailViewLink={[Function]}
    headingId="dashboardListingHeading"
    id="dashboard"
    initialFilter=""
    tableListTitle="Dashboards"
  >
    <DashboardUnsavedListing
      redirectTo={[MockFunction]}
      refreshUnsavedDashboards={[Function]}
      unsavedDashboardIds={
        Array [
          "dashboardUnsavedOne",
          "dashboardUnsavedTwo",
        ]
      }
    />
  </Memo(TableListViewComp)>
</DashboardListing>
`;

exports[`after fetch renders call to action when no dashboards exist 1`] = `
<DashboardListing
  kbnUrlStateStorage={
    Object {
      "cancel": [Function],
      "change$": [Function],
      "get": [Function],
      "kbnUrlControls": Object {
        "cancel": [Function],
        "flush": [Function],
        "getPendingUrl": [Function],
        "listen": [Function],
        "update": [Function],
        "updateAsync": [Function],
      },
      "set": [Function],
    }
  }
  redirectTo={[MockFunction]}
>
  <Memo(TableListViewComp)
    createItem={[Function]}
    deleteItems={[Function]}
    editItem={[Function]}
    emptyPrompt={
      <EuiEmptyPrompt
        actions={
          <EuiButton
            color="primary"
            data-test-subj="newItemButton"
            fill={true}
            iconType="plusInCircle"
            onClick={[Function]}
            size="m"
          >
            Create a dashboard
          </EuiButton>
        }
        body={
          <React.Fragment>
            <p>
              Analyze all of your Elastic data in one place by creating a dashboard and adding visualizations.
            </p>
            <p>
              <FormattedMessage
                defaultMessage="New to Kibana? {sampleDataInstallLink} to take a test drive."
                id="dashboard.listing.createNewDashboard.newToKibanaDescription"
                values={
                  Object {
                    "sampleDataInstallLink": <EuiLink
                      onClick={[Function]}
                    >
                      Add some sample data
                    </EuiLink>,
                  }
                }
              />
            </p>
          </React.Fragment>
        }
        iconType="dashboardApp"
        title={
          <h1
            data-test-subj="emptyListPrompt"
            id="dashboardListingHeading"
          >
            Create your first dashboard
          </h1>
        }
      />
    }
    entityName="dashboard"
    entityNamePlural="dashboards"
    findItems={[Function]}
    getDetailViewLink={[Function]}
    headingId="dashboardListingHeading"
    id="dashboard"
    initialFilter=""
    tableListTitle="Dashboards"
  >
    <DashboardUnsavedListing
      redirectTo={[MockFunction]}
      refreshUnsavedDashboards={[Function]}
      unsavedDashboardIds={
        Array [
          "dashboardUnsavedOne",
          "dashboardUnsavedTwo",
        ]
      }
    />
  </Memo(TableListViewComp)>
</DashboardListing>
`;

exports[`after fetch renders call to action with continue when no dashboards exist but one is in progress 1`] = `
<DashboardListing
  kbnUrlStateStorage={
    Object {
      "cancel": [Function],
      "change$": [Function],
      "get": [Function],
      "kbnUrlControls": Object {
        "cancel": [Function],
        "flush": [Function],
        "getPendingUrl": [Function],
        "listen": [Function],
        "update": [Function],
        "updateAsync": [Function],
      },
      "set": [Function],
    }
  }
  redirectTo={[MockFunction]}
>
  <Memo(TableListViewComp)
    createItem={[Function]}
    deleteItems={[Function]}
    editItem={[Function]}
    emptyPrompt={
      <EuiEmptyPrompt
        actions={
          <EuiFlexGroup
            alignItems="center"
            gutterSize="s"
            justifyContent="center"
            responsive={false}
          >
            <EuiFlexItem
              grow={false}
            >
              <EuiButtonEmpty
                aria-label="Discard changes to New Dashboard"
                color="danger"
                data-test-subj="discardDashboardPromptButton"
                onClick={[Function]}
                size="s"
              >
                Discard changes
              </EuiButtonEmpty>
            </EuiFlexItem>
            <EuiFlexItem
              grow={false}
            >
              <EuiButton
                aria-label="Continue editing New Dashboard"
                color="primary"
                data-test-subj="newItemButton"
                fill={true}
                iconType="pencil"
                onClick={[Function]}
                size="m"
              >
                Continue editing
              </EuiButton>
            </EuiFlexItem>
          </EuiFlexGroup>
        }
        body={
          <React.Fragment>
            <p>
              Analyze all of your Elastic data in one place by creating a dashboard and adding visualizations.
            </p>
          </React.Fragment>
        }
        iconType="dashboardApp"
        title={
          <h1
            data-test-subj="emptyListPrompt"
            id="dashboardListingHeading"
          >
            Dashboard in progress
          </h1>
        }
      />
    }
    entityName="dashboard"
    entityNamePlural="dashboards"
    findItems={[Function]}
    getDetailViewLink={[Function]}
    headingId="dashboardListingHeading"
    id="dashboard"
    initialFilter=""
    tableListTitle="Dashboards"
  >
    <DashboardUnsavedListing
      redirectTo={[MockFunction]}
      refreshUnsavedDashboards={[Function]}
      unsavedDashboardIds={
        Array [
          "unsavedDashboard",
        ]
      }
    />
  </Memo(TableListViewComp)>
</DashboardListing>
`;

exports[`after fetch showWriteControls 1`] = `
<DashboardListing
  kbnUrlStateStorage={
    Object {
      "cancel": [Function],
      "change$": [Function],
      "get": [Function],
      "kbnUrlControls": Object {
        "cancel": [Function],
        "flush": [Function],
        "getPendingUrl": [Function],
        "listen": [Function],
        "update": [Function],
        "updateAsync": [Function],
      },
      "set": [Function],
    }
  }
  redirectTo={[MockFunction]}
>
  <Memo(TableListViewComp)
    emptyPrompt={
      <EuiEmptyPrompt
        body={
          <p>
            There are no available dashboards. To change your permissions to view the dashboards in this space, contact your administrator.
          </p>
        }
        iconType="glasses"
        title={
          <h1
            data-test-subj="emptyListPrompt"
            id="dashboardListingHeading"
          >
            No dashboards to view
          </h1>
        }
      />
    }
    entityName="dashboard"
    entityNamePlural="dashboards"
    findItems={[Function]}
    getDetailViewLink={[Function]}
    headingId="dashboardListingHeading"
    id="dashboard"
    initialFilter=""
    tableListTitle="Dashboards"
  >
    <DashboardUnsavedListing
      redirectTo={[MockFunction]}
      refreshUnsavedDashboards={[Function]}
      unsavedDashboardIds={
        Array [
          "dashboardUnsavedOne",
          "dashboardUnsavedTwo",
        ]
      }
    />
  </Memo(TableListViewComp)>
</DashboardListing>
`;
